--- a/source/_posts/开始.md
+++ b/source/_posts/开始.md
@@ -8,6 +8,8 @@ categories: 其他
 
 还记的去年还是前年的某一天，突然心血来潮又想写点东西，却发现没有地方写了。正好那段时间对nodejs感兴趣，直接买了本node高级编程就开始撸，虽然后来也没撸出什么成果来，但却可以回答一个问题，就是现在很多人总是问我，怎么学java学的好好地，怎么突然跑去学nodejs了。
 
+<!--more-->
+
 时间过的就是快，这转眼离毕业都将近3年了，其实我当初是想回太原的，结果阴差阳错大连呆了这么长时间，还进了个美国公司，按别人的话说，日子那叫一个悠闲，提前进入老年人生活节奏。要说自由，那确实是，要说悠闲，还是算了，其实有很多事情还是很麻烦的，尤其入了测试这个行业，对于我这种不拘小节的人来说真是哔了狗了。
 
 工作以来，生活一直都是很单调。基本就是处于上班、下班、做饭、写代码、背单词、睡觉，再利用空余时间穿插着练练吉他，仅此而已。我爸总提醒我，自己的事情，是要有个规划的，然而现在我真的有点迷茫了。首先是工作上的很多事情，愉快的不愉快的，都让我改变了对一些事情的看法。
