--- a/source/_posts/开始.md
+++ b/source/_posts/开始.md
@@ -1,7 +1,7 @@
 ---
 title: 开始
 date: 2016-06-20 13:57:24
-tags: [其他]
+tags: [其他，心情]
 ---
 
 自从毕业以来，是一直想要建一个博客的，当然我没有什么好炫耀的个人经历又或者牛叉的技术博文，仅仅是想记录一些东西。原先的习惯是，每年会在qq空间中写一篇文章，后来qq被盗了一次，还给我把以前写的东西都删掉了，后来就再写过东西了。
