--- a/source/_posts/20160627.md
+++ b/source/_posts/20160627.md
@@ -1,17 +1,8 @@
 ---
 title: 20160627
 date: 2016-06-27 15:21:00
-tags: [英语，记录]
+tags: [英语]
 ---
-
-# 进程
-**C8U4**的前两组sentences 
-
-# 作业
-**C8U4**剩余的sentences和short dialogues(optional)
-
-# 记录
-
 shortage 短缺
 > a shortage of ...(funds, ideas, water)
 
