--- a/source/_posts/20160627.md
+++ b/source/_posts/20160627.md
@@ -15,6 +15,8 @@ inferior/superior quality 质量很差
 replace 代替
 > A replace B = sb replace B with A.
 
+<!--more-->
+
 adequate/inadequate 足够的/不足够的
 > the resource is adequate for us.
 
