--- a/source/_posts/20160701.md
+++ b/source/_posts/20160701.md
@@ -15,6 +15,8 @@ get on top of ...(problems, bad situations) 解决了困境
 get through to the sb
 > It's hard to get through to the kids. 被小孩子理解十分难。
 
+<!--more-->
+
 suspicious 多疑的
 > young kids are normally suspicious. 小孩子通常是多疑的。
 
