--- a/source/_posts/简单探索右移操作符.md
+++ b/source/_posts/简单探索右移操作符.md
@@ -26,7 +26,7 @@ target = target >> 0;
 > Performs a sign-filling bitwise right shift operation on the left operand by the amount specified by the right operand. 
 
 应该是没错了，继续往下看，可以发现 12.8.4.1 中详细介绍了右移操作符的相关规范。
-{% img /img/img/右移-1.jpg 
+{% img /img/右移-1.jpg 
 %}
 
 大概流程可以简单理解为，分别求得右移操作符左右两侧表达式的值后（其中包含一些取值、校验、转换逻辑），之后按照右移逻辑返回一个32位有符号整数。关于代码，我们比较感兴趣的是操作符左侧所对应的取值逻辑，所以这里我们需要详细看关于操作符左侧取值的逻辑，相关的步骤包含 1、2、3、7、8，依次是：
@@ -39,11 +39,11 @@ target = target >> 0;
 光看这个步骤是没有任何用处的，所以还需要继续看一下规范中关于 GetValue 和 ToInt32 的章节，这次就不用搜索了，直接点击链接跳转过去即可。
 
 GetValue 如下：
-{% img /img/img/右移-2.jpg 
+{% img /img/右移-2.jpg 
 %}
 
 ToInt32 如下：
-{% img /img/img/右移-3.jpg 
+{% img /img/右移-3.jpg 
 %}
 
 这两个方法的详细过程就不说明了，以一个简单的例子大概理一下流程，比如使用以上代码时，假设 target 的类型是字符串，比如：
