rewrite the index.mdx

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,17 +4,16 @@ title: About
 date: 2021-03-19
 ---
 
-# Your Name
+# Lyon Wu
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+Hello, my name is haoliang.wu, and I am a full-stack engineer specializing in financial and web3 development, with years of experience across various domains. I work with a variety of technologies to create both user-friendly front-end features and back-end applications, and I have knowledge of operations, security, and databases.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+In my development process, I prioritize creating scalable, highly available, maintainable, and optimized software applications. My skills include JavaScript, React/Vue/Svelte, Node.js, Python, Java, and others.
 
-[**Deploy your own**](https://vercel.com/new/clone?demo-title=Portfolio+Starter+Kit&demo-description=Easily+create+a+portfolio+with+Next.js+and+Markdown.&demo-url=https%3A%2F%2Fdemo.vercel.blog%2F&demo-image=%2F%2Fimages.ctfassets.net%2Fe5382hct74si%2F2aC4eHLrOKmT4fnLfoNGK2%2F14b1e6bbe598ec023ffe85001d31e634%2FCleanShot_2022-04-11_at_23.12.01.png&project-name=Portfolio+Starter+Kit&repository-name=portfolio-starter-kit&repository-url=https%3A%2F%2Fgithub.com%2Fvercel%2Fnextjs-portfolio-starter&from=templates&skippable-integrations=1&teamCreateStatus=hidden) in a few minutes.
+I'm passionate about exploring new technologies and continuously growing with my team, striving to achieve better user experiences and business value. 
 
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- GitHub [@haoliangwu](https://github.com/haoliangwu)
+- 知乎 [@littlelyon](https://www.zhihu.com/people/littlelyon)
+- Email littlelyon@aliyun.com
