update social media links

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,6 +14,7 @@ I'm passionate about exploring new technologies and continuously growing with my
 
 ---
 
+- Email littlelyon@aliyun.com
 - GitHub [@haoliangwu](https://github.com/haoliangwu)
 - 知乎 [@littlelyon](https://www.zhihu.com/people/littlelyon)
-- Email littlelyon@aliyun.com
+- SegmentFault [@littlelyon](https://segmentfault.com/u/littlelyon)
