migrate to nextra@2.5.0

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,5 +16,6 @@ date: 2023-03-31
 
 - Email littlelyon@aliyun.com
 - GitHub [@haoliangwu](https://github.com/haoliangwu)
+  [@haoliangwu(work)](https://github.com/haoliangwu-sbi-dalian)
 - 知乎 [@littlelyon](https://www.zhihu.com/people/littlelyon)
 - SegmentFault [@littlelyon](https://segmentfault.com/u/littlelyon)
