--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,17 +3,20 @@ type: page
 title: About
 date: 2023-03-31
 ---
-
-# Lyon Wu
+import MySkills from './components/MySkills'
 
 你好，我是 haoliang.wu，一名专注于金融和 Web3 领域的全栈工程师。
 
-在前端各个领域拥有多年的开发经验，并具有服务端、运维、安全和数据库方面的知识。我一直致力于编写可扩展、高可用、可维护和优化的应用程序，我的技能包括 JavaScript、React/Vue/Svelte、Node.js、Python、Java 以及相关常见的技术栈。
+在 WEB 领域拥有多年的开发经验，并具有运维、安全方面的实践经验和知识，我一直致力于编写可扩展、高可用、可维护和健壮的应用程序和模块，为我的团队创造价值。
 
-我热衷于探索新技术，不断学习并与团队不断成长，致力于实现更好的用户体验和业务价值。
+我热衷于探索新技术，不断学习并与团队不断成长，致力于创造更好的用户体验和业务价值。
 
----
+华丽的跌倒，胜过无谓的徘徊。
 
+<h2>My Skills</h2>
+<MySkills />
+
+<h2>Social Profiles</h2>
 - Email littlelyon@aliyun.com
 - GitHub [@haoliangwu](https://github.com/haoliangwu)
   [@haoliangwu(work)](https://github.com/haoliangwu-sbi-dalian)
