fix: move components dif outside of pages

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,7 +3,7 @@ type: page
 title: About
 date: 2023-03-31
 ---
-import MySkills from './components/MySkills'
+import MySkills from '../components/MySkills'
 
 你好，我是 haoliang.wu，一名专注于金融和 Web3 领域的全栈工程师。
 
