--- a/pages/posts/aws-iam-in-action.mdx
+++ b/pages/posts/aws-iam-in-action.mdx
@@ -5,7 +5,7 @@ description: 介绍 AWS IAM 服务所包含的核心概念与最佳实践，IAM 
 tag: aws
 author: You
 ---
-import ImagePreviewer from '../components/ImagePreviewer'
+import ImagePreviewer from '../../components/ImagePreviewer'
 
 ## IAM 是什么
 AWS Identity and Access Management (IAM) 是一种 Web 服务，可以帮助您安全地控制对 AWS 资源的访问。借助 IAM，您可以集中管理控制用户可访问哪些 AWS 资源的权限。可以使用 IAM 来控制谁通过了身份验证（准许登录）并获得授权（拥有权限）来使用资源。
