--- a/pages/posts/aws-vpc-in-action.mdx
+++ b/pages/posts/aws-vpc-in-action.mdx
@@ -5,7 +5,7 @@ description: 介绍 AWS VPC 服务所包含的核心概念与最佳实践，VPC 
 tag: aws
 author: You
 ---
-import ImagePreviewer from '../components/ImagePreviewer'
+import ImagePreviewer from '../../components/ImagePreviewer'
 
 ## VPC 是什么
 AWS VPC（Virtual Private Cloud）是一种虚拟的网络服务，它可以让用户在 AWS 云上建立自己的私有网络，提供安全、扩展性和自定义的网络控制。<br />AWS VPC 可以让用户在一个私有且隔离的区域内构建和运行 AWS 云中的资源，如 Amazon EC2 实例、数据库实例以及其他服务资源。用户可以自定义 VPC 的 IP 地址范围、子网、路由表、网络网关等，以达到更好的网络控制和安全性。
