--- a/pages/posts/nextjs-with-cloudfront.mdx
+++ b/pages/posts/nextjs-with-cloudfront.mdx
@@ -5,7 +5,7 @@ description: 主要介绍如何使用 AWS CloudFront 在内容分发时，对 Ne
 tag: aws, nextjs
 author: You
 ---
-import ImagePreviewer from '../components/ImagePreviewer'
+import ImagePreviewer from '../../components/ImagePreviewer'
 
 ## 写在前面
 AWS CloudFront 是一项全球内容传送服务，它可以加速静态和动态内容的传输，并提供安全可靠的交付。CloudFront 通过将内容缓存在全球分布的边缘位置，使用户能够以低延迟和高带宽访问您的应用程序、网站、视频内容和其他静态或动态资源。
