--- a/pages/posts/the-functor-of-fp.mdx
+++ b/pages/posts/the-functor-of-fp.mdx
@@ -6,7 +6,7 @@ tag: fp
 author: You
 ---
 
-import ImagePreviewer from "../components/ImagePreviewer";
+import ImagePreviewer from "../../components/ImagePreviewer";
 
 ## Category 与范畴论
 
