--- a/pages/posts/the-monad-of-fp.mdx
+++ b/pages/posts/the-monad-of-fp.mdx
@@ -6,7 +6,7 @@ tag: fp
 author: You
 ---
 
-import ImagePreviewer from "../components/ImagePreviewer";
+import ImagePreviewer from "../../components/ImagePreviewer";
 
 ## Applicative 无法解决的问题
 
