--- a/pages/posts/the-semigroup-of-fp.mdx
+++ b/pages/posts/the-semigroup-of-fp.mdx
@@ -6,7 +6,7 @@ tag: fp
 author: You
 ---
 
-import ImagePreviewer from "../components/ImagePreviewer";
+import ImagePreviewer from "../../components/ImagePreviewer";
 
 ## 什么是 Semigroup
 
