--- a/pages/posts/rsc-in-depth.mdx
+++ b/pages/posts/rsc-in-depth.mdx
@@ -19,6 +19,8 @@ RSC 是 React Server Component 的缩写，它是 React 即将发布的新的组
 
 在 Next 12 及之前，虽然页面的渲染方式从 SPA 的方式，转变为了 SSR，但是它的渲染颗粒度，是 Page 级别的，服务端与客户端渲染页面的方式，并不能够称作协作，因为在本质上，服务端和客户端渲染页面的方式是不相同的，它们的职责可以简单概括为服务端**直出静态 html 文档**，而客户端负责**填充数据**和**处理动态逻辑**。
 
+而在 Next 13 之后，由于组件的渲染颗粒度因为 RSC 的存在，统一被细化到了组件级别，无论这个运行时是在服务端还是客户端，它们的心智模型都是相同的（除了你要记忆一些额外的声明式指令，比如 `use client` 或 `use server`），且 Server Component 和 Client Component 在一定条件下可以互相引用，这看起来更像是“协作”，而在之前，往往是一个 Page Component 引用多个 Client Component。
+
 ## RSC 渲染服务
 RSC 的设计目的，并不是单纯为了取代服务端或客户端的当前已有的渲染方式，而是在其基础上，额外提供了一个独立于它们的渲染服务。
 
