--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,13 +5,13 @@ date: 2023-03-31
 ---
 import MySkills from '../components/MySkills'
 
-你好，我是 haoliang.wu，一名专注于金融和 Web3 领域的全栈工程师。
+你好，我是 haoliang.wu，一名专注于 Web 领域的全栈工程师，同时在金融、Web3 等业务领域具有丰富的实战经验。
 
-在 WEB 领域拥有多年的开发经验，并具有运维、安全方面的实践经验和知识，我一直致力于编写可扩展、高可用、可维护和健壮的应用程序和模块，为我的团队创造价值。
+在 Web 领域，我拥有丰富的实战经验，可以针对各种实际问题给予切实可行的解决方案和建议。在运维、性能和安全方面，我也拥有宝贵的实践经验和必要知识，同时一直致力于编写可扩展、高可用、可维护和健壮的应用程序和模块，为我的团队创造价值。
 
 我热衷于探索新技术，不断学习并与团队不断成长，致力于创造更好的用户体验和业务价值。
 
-华丽的跌倒，胜过无谓的徘徊。
+同时我坚信，华丽的跌倒，胜过无谓的徘徊。不忘初心，方得始终。
 
 <h2>My Skills</h2>
 <MySkills />
