--- a/pages/posts/perf-testing-with-k6-for-web-vitals.mdx
+++ b/pages/posts/perf-testing-with-k6-for-web-vitals.mdx
@@ -1,7 +1,7 @@
 ---
 title: Performance Testing with K6 for Web Vitals
 date: 2024/03/13
-description: 介绍如何通过 k6 来对系统进行各种维度的 e2e 性能测试，同时如何在 AWS 上构建完整的 CI/CD 体系。
+description: 介绍如何通过 k6 来对系统在 Web Vitals 规范指导下，进行性能测试。
 tag: aws
 author: You
 ---
