feat: the wc-is-ready.mdx

--- a/src/content/blog/styling-the-wc.mdx
+++ b/src/content/blog/styling-the-wc.mdx
@@ -1,12 +1,12 @@
 ---
 title: Styling the Web Component
-excerpt: 'we will explore the essential techniques for styling modern web components, including the use of CSS variables for design tokens, and advanced selectors like :host(), ::slotted() and ::part().'
+excerpt: we will explore the essential techniques for styling modern web components, including the use of CSS variables for design tokens, and advanced selectors like :host(), ::slotted() and ::part().
 publishDate: 2024/08/24
 tags:
   - web component
 seo:
   image:
-    src: '/images/styling-the-wc/img1.jpg'
+    src: '/images/wc/excerpt.jpg'
     alt: 'Styling the Web Component'
 ---
 
